--- a/resume.tex
+++ b/resume.tex
@@ -100,22 +100,21 @@
 
 \section{\mysidestyle Self-Directed Projects}
     \begin{asparablank}
+        \item \textbf{LDAP Profiles}: Created and maintain a Rails web 
+            application to act as a friendly interface to LDAP servers. 
+            It integrates with WebAuth to securely provide keyless login. 
+            Actively used in production at Rochester Institute of Technology \\
+        \item \textbf{Github Language Analysis}: Built a data anaylzer and
+            ingest pipeline using Go to determine the programming language 
+            usage across all of GitHub. Was able to provide key insights to usage
+            trends over time and in comparison to each other. Implemented a 
+            distributed ingest pipeline to increase processing capabilities. \\
         \item \textbf{Sys Mon}: Developed a system monitoring tool in Ruby to monitor
             load average, memory usage, and IO. All the log
             data is viewable through a web interface with graphs over time. \\
-        \item \textbf{Github Stats}: Built a data anaylzer in Go to determine the language
-            usage of repositories on GitHub. This showes the connections between
-            various languages and usage over time. The data anaylzer was set up in a
-            distributed manner using RabbitMQ to increase network performance. \\
-        \item \textbf{LDAP Profiles}: Created a Rails web application to act as a
-            friendly interface to LDAP servers. It integrates with WebAuth to
-            securely bind to LDAP and to safely deal with user information. \\
         \item \textbf{Mobile News}: Wrote an Android application to allow users to read 
             and edit the Computer Science House’s internal news network on a 
             native application. \\
-        \item \textbf{Housing Site}: Designed a Python web server to allow for room 
-            registration for future room assignments for members of the Computer
-            Science House.
     \end{asparablank}
 \section{\mysidestyle Awards}
     \begin{asparablank}
