--- a/resume.tex
+++ b/resume.tex
@@ -22,21 +22,26 @@
 \begin{resume}
 \section{\mysidestyle Contact \\ Information} \vspace{2mm}
 	\begin{asparablank}
-    \item \hfill
-		\item \hfill \href{http://jd.batchik.net/}{http://jd.batchik.net}
-		\item  \hfill 
+    \item \hfill \href{mailto:josephbatchik@gmail.com}{josephbatchik@gmail.com}
+    \item \hfill (410) 599-3550
 	\end{asparablank}
-
-\section{\mysidestyle Objective}
-	To secure a 2015 summer internship in the field of computer science.
 
 \section{\mysidestyle Experience}
 	\begin{asparadesc}
+        \employer{Cloudera}{San Francisco, CA}{Summer 2015}{Software Engineer Intern}
+        {http://cloudera.com/}
+        \small
+        Worked on a several parts of Apache Spark, including implementing performance
+        increases which reduce network traffic by over 90\% and integrating Apache
+        Avro as a first class citizen into Spark core. Languages / tools used: 
+        Scala, Java, Avro.
+        \normalsize
+        \\
         \employer{Google}{New York, NY}{Summer 2014}{SRE Engineering Practicum Intern}
         {http://google.com/}
 		\small
         Implemented load testing infrastructure for newly released software.
-        Reduced request latency by 70\% for backend monitoring services.
+        Reduced request latency by 70\% for back-end monitoring services.
         Languages / tools used: Java, Python, Protocol Buffers, Google data stores.
 		\normalsize
 		\\
@@ -51,7 +56,7 @@
 		\employer{John Hopkins University Applied Physics Lab}{Laurel, MD}
         {Summer 2013}{Engineering Intern}{http://jhuapl.edu/}
 		\small
-		Developed a sensor management system used to control and collect data from
+		Working with a team, developed a sensor management system used to control and collect data from
         multiple telescopes remotely. Languages / tools used: Java, ant, svn, SQL,
         Google Protocol Buffers.
         \normalsize
@@ -77,21 +82,21 @@
 \section{\mysidestyle Technical Skills \& Certifications}
 	\begin{compactdesc}
 		\item[Languages] \begin{inparaenum} { \small
+            \item Scala
 			\item Python
 			\item Java
-            \item Haskell
-			\item HTML / CSS
 			\item Ruby
 			\item Go
-            \item C
+            \item Haskell
 		} \end{inparaenum}
 		\item[Tools] \begin{inparaenum} { \small
-			\item git
-            \item vim
-            \item rails
-            \item postgreSQL
+			\item Git
+            \item Apache Spark
+            \item Apache Avro
+            \item Rails
+            \item PostgreSQL
             \item JUnit
-            \item Google Protocol Buffers
+            \item Protocol Buffers
 		} \end{inparaenum}
         \item[Certifications] \begin{inparaenum} { \small
             \item Cloudera Certified Developer for Apache Hadoop, 2012    
@@ -100,29 +105,25 @@
 
 \section{\mysidestyle Self-Directed Projects}
     \begin{asparablank}
+        \item \textbf{Wikipedia Page Views}: Using HDFS and HBase, built a system that
+            processed and stored the page view log data for all of Wikipedia 
+            and presented the information in a real-time web UI. Created and 
+            maintained myself an 8 node Hadoop cluster for the project. \\
+        \item \textbf{Github Language Analysis}: Built a data analyzer and
+            ingest pipeline using Go to determine the programming language 
+            usage across all of GitHub. This provided key insights to language usage
+            trends over time and in comparison to each other. Implemented a 
+            distributed ingest pipeline to increase processing capabilities. \\
         \item \textbf{LDAP Profiles}: Created and maintain a Rails web 
             application to act as a friendly interface to LDAP servers. 
             It integrates with WebAuth to securely provide keyless login. 
-            Actively used in production at Rochester Institute of Technology \\
-        \item \textbf{Github Language Analysis}: Built a data anaylzer and
-            ingest pipeline using Go to determine the programming language 
-            usage across all of GitHub. Was able to provide key insights to usage
-            trends over time and in comparison to each other. Implemented a 
-            distributed ingest pipeline to increase processing capabilities. \\
-        \item \textbf{Sys Mon}: Developed a system monitoring tool in Ruby to monitor
-            load average, memory usage, and IO. All the log
-            data is viewable through a web interface with graphs over time. \\
-        \item \textbf{Mobile News}: Wrote an Android application to allow users to read 
-            and edit the Computer Science House’s internal news network on a 
-            native application. \\
+            Actively used in production at Rochester Institute of Technology. \\
     \end{asparablank}
 \section{\mysidestyle Awards}
     \begin{asparablank}
         \item \textbf{Maryland Math Engineering Science Achievement}: Won 1st place
             in both regional and state level competitions for developing a maze
-            traversal algorithm in Python. \\
-        \item \textbf{Website Excellence Award, FIRST Robotics}: Developed and maintained an
-            award-winning website for my school's FIRST robotics team.
+            traversal algorithm in Python. 
     \end{asparablank}
 \section{\mysidestyle Clubs \& Activities}
     \begin{asparablank}
