--- a/resume.tex
+++ b/resume.tex
@@ -9,6 +9,12 @@
 	pdfborder={0 0 0},
 	unicode=true
 }
+
+
+\newcommand\textbox[1]{%
+  \parbox{.333\textwidth}{#1}%
+  }
+
 \marginsize{0.375in}{1.875in}{0.375in}{0.375in}
 \setdefaultitem{\footnotesize \textbullet}{}{}{}{}{}
 \setdefaultleftmargin{0em}{}{}{}{}{}
@@ -16,41 +22,41 @@
 \newcommand{\rurl}[1]{\hfill {\footnotesize \url{#1}}}
 \newcommand{\rdate}[1]{\hfill {\small #1}}
 \renewcommand{\employer}[5]{ \item[#1] - #2 \rdate{#3} \\* #4 \rurl{#5} \\*}
-%\renewcommand{\employer}[5]{\item[#1] - #2 \rdate{#3} \\* #4 \rurl{#5} \\*}
 \begin{document}
-\name{\Large Joseph D. Batchik}
+\name{\Large{Joseph D. Batchik} \hskip 0pt plus 2fil minus 0pt {\small{\href{mailto:josephbatchik@gmail.com}{josephbatchik@gmail.com} - (410) 599-3550}}}
 \begin{resume}
-\section{\mysidestyle Contact \\ Information} \vspace{2mm}
-	\begin{asparablank}
-    \item \hfill \href{mailto:josephbatchik@gmail.com}{josephbatchik@gmail.com}
-    \item \hfill (410) 599-3550
-	\end{asparablank}
-
-\section{\mysidestyle Experience}
+\section{\mysidestyle Objective}
+    To secure full-time employment in a challenging, fast-paced computer development role.
+\section{\mysidestyle Work Experience}
 	\begin{asparadesc}
         \employer{Cloudera}{San Francisco, CA}{Summer 2015}{Software Engineer Intern}
         {http://cloudera.com/}
         \small
-        Worked on a several parts of Apache Spark, including implementing performance
+        Worked on a several different parts of Apache Spark, including implementing performance
         increases which reduce network traffic by over 90\% and integrating Apache
-        Avro as a first class citizen into Spark core. Languages / tools used: 
+        Avro as a first class citizen into Spark core. Went through the process of packaging
+        changes into major Hadoop release. Languages / tools used: 
         Scala, Java, Avro.
         \normalsize
         \\
         \employer{Google}{New York, NY}{Summer 2014}{SRE Engineering Practicum Intern}
         {http://google.com/}
 		\small
-        Implemented load testing infrastructure for newly released software.
-        Reduced request latency by 70\% for back-end monitoring services.
-        Languages / tools used: Java, Python, Protocol Buffers, Google data stores.
+        Implemented load testing infrastructure for newly released software,
+        allowing for early detection of bugs and performance defects before
+        releasing to the end user. Reduced request latency by 70\% for 
+        back-end monitoring services. Languages / tools used: Java, Python, 
+        Protocol Buffers, Google data stores.
 		\normalsize
 		\\
 		\employer{Amazon}{Seattle, WA}{Spring 2014}{Software Developer Engineer Intern}
         {http://amazon.com/}
 		\small
 	    Overhauled internal search capabilities for the Enterprise Data Warehouse
-        team, using various Amazon cloud products, including Cloud-Search, SNS,
-        and SQS.
+        team, allowing for near-real time search capabilities for Amazon's data
+        analytics. Designed the System to be fault tolerant to preserve data integrity.
+        Languages / tools used: Java, various Amazon cloud products, including Cloud-Search
+        and SNS.
         \normalsize
 		\\
 		\employer{John Hopkins University Applied Physics Lab}{Laurel, MD}
@@ -74,7 +80,7 @@
 		\item[Rochester Institute of Technology] - Rochester, NY \rdate{September 2012 - Present}
 		\begin{compactitem} { \small
 			\item Major: Computer Science, Minor: American Politics
-            \item Dean's List: In-Major: 3.82 GPA, Over All: 3.6 GPA
+            \item Dean's List: In-Major: 3.82 GPA, Overall: 3.6 GPA
 			\item Expected graduation: May 2016
 		} \end{compactitem}
 	\end{compactdesc}
@@ -107,17 +113,16 @@
     \begin{asparablank}
         \item \textbf{Wikipedia Page Views}: Using HDFS and HBase, built a system that
             processed and stored the page view log data for all of Wikipedia 
-            and presented the information in a real-time web UI. Created and 
-            maintained myself an 8 node Hadoop cluster for the project. \\
+            and presented the information in a real-time web UI. Personally setup and 
+            maintained an 8 node Hadoop cluster for the project. \\
         \item \textbf{Github Language Analysis}: Built a data analyzer and
             ingest pipeline using Go to determine the programming language 
             usage across all of GitHub. This provided key insights to language usage
             trends over time and in comparison to each other. Implemented a 
             distributed ingest pipeline to increase processing capabilities. \\
         \item \textbf{LDAP Profiles}: Created and maintain a Rails web 
-            application to act as a friendly interface to LDAP servers. 
-            It integrates with WebAuth to securely provide keyless login. 
-            Actively used in production at Rochester Institute of Technology. \\
+            application to act as a friendly interfreleasing to the end userIt integrates with WebAuth to securely provide keyless login. 
+            Actively used in production at Rochester Institute of Technology.
     \end{asparablank}
 \section{\mysidestyle Awards}
     \begin{asparablank}
