small objective change

--- a/resume.tex
+++ b/resume.tex
@@ -26,7 +26,7 @@
 \name{\Large{Joseph D. Batchik} \hskip 0pt plus 2fil minus 0pt {\small{\href{mailto:josephbatchik@gmail.com}{josephbatchik@gmail.com} - (410) 599-3550}}}
 \begin{resume}
 \section{\mysidestyle Objective}
-    To secure full-time employment in a challenging, fast-paced computer development role.
+    To secure full-time employment in a challenging, fast-paced development role.
 \section{\mysidestyle Work Experience}
 	\begin{asparadesc}
         \employer{Cloudera}{San Francisco, CA}{Summer 2015}{Software Engineer Intern}
