added apache spark stuff

--- a/resume.tex
+++ b/resume.tex
@@ -36,7 +36,7 @@
         increases which reduce network traffic by over 90\% and integrating Apache
         Avro as a first class citizen into Spark core. Went through the process of packaging
         changes into major Hadoop release. Languages / tools used: 
-        Scala, Java, Avro.
+        Scala, Java.
         \normalsize
         \\
         \employer{Google}{New York, NY}{Summer 2014}{SRE Engineering Practicum Intern}
@@ -77,12 +77,9 @@
 
 \section{\mysidestyle Education}
 	\begin{compactdesc}
-		\item[Rochester Institute of Technology] - Rochester, NY \rdate{September 2012 - Present}
-		\begin{compactitem} { \small
-			\item Major: Computer Science, Minor: American Politics
-            \item Dean's List: In-Major: 3.82 GPA, Overall: 3.6 GPA
-			\item Expected graduation: May 2016
-		} \end{compactitem}
+		\item[Rochester Institute of Technology] - Rochester, NY \rdate{September 2012 - Present} \\
+            Major: Computer Science, Minor: American Politics \rdate{In-Major: 3.82 GPA, Overall: 3.60 GPA} \\
+            Graduation: May 2016 \rdate{Dean's List}
 	\end{compactdesc}
 
 \section{\mysidestyle Technical Skills \& Certifications}
@@ -97,8 +94,8 @@
 		} \end{inparaenum}
 		\item[Tools] \begin{inparaenum} { \small
 			\item Git
-            \item Apache Spark
-            \item Apache Avro
+            \item Spark
+            \item Avro
             \item Rails
             \item PostgreSQL
             \item JUnit
@@ -107,6 +104,8 @@
         \item[Certifications] \begin{inparaenum} { \small
             \item Cloudera Certified Developer for Apache Hadoop, 2012    
         } \end{inparaenum}
+        \item[Apache Spark Contributor] Developed a solution to allow for Spark to efficiently read
+            / write Apache Avro data formats. Worked on features in the Spark SQL engine.
 	\end{compactdesc}
 
 \section{\mysidestyle Self-Directed Projects}
@@ -121,7 +120,8 @@
             trends over time and in comparison to each other. Implemented a 
             distributed ingest pipeline to increase processing capabilities. \\
         \item \textbf{LDAP Profiles}: Created and maintain a Rails web 
-            application to act as a friendly interfreleasing to the end userIt integrates with WebAuth to securely provide keyless login. 
+            application to act as a friendly interfreleasing to the end userIt 
+            integrates with WebAuth to securely provide keyless login. 
             Actively used in production at Rochester Institute of Technology.
     \end{asparablank}
 \section{\mysidestyle Awards}
