--- a/resume.tex
+++ b/resume.tex
@@ -5,17 +5,14 @@
 \usepackage{enumitem}
 \usepackage[unicode]{hyperref}
 \hypersetup{
-	pdftitle={Joseph Batchik's Resume},
-	pdfauthor={Joseph Batchik},
-	pdfborder={0 0 0},
-	unicode=true
+  pdftitle={Joseph Batchik's Resume},
+  pdfauthor={Joseph Batchik},
+  pdfborder={0 0 0},
+  unicode=true
 }
-
-
 \newcommand\textbox[1]{%
   \parbox{.333\textwidth}{#1}%
-  }
-
+}
 \marginsize{0.375in}{1.875in}{0.375in}{0.375in}
 \setdefaultitem{\footnotesize \textbullet}{}{}{}{}{}
 \setdefaultleftmargin{0em}{}{}{}{}{}
@@ -24,7 +21,9 @@
 \newcommand{\rdate}[1]{\hfill {\small #1}}
 \renewcommand{\employer}[5]{ \item[#1] - #2 \rdate{#3} \\* #4 \rurl{#5} \\*}
 \begin{document}
-\name{\Large{Joseph D. Batchik} \hskip 0pt plus 2fil minus 0pt {\small{\href{mailto:josephbatchik@gmail.com}{josephbatchik@gmail.com} - (410) 599-3550}}}
+\name{\Large{Joseph D. Batchik} \hskip 0pt plus 2fil minus 0pt
+  {\small{\href{mailto:josephbatchik@gmail.com}{josephbatchik@gmail.com}
+      - (410) 599-3550}}}
 \begin{resume}
   \section{\mysidestyle Work Experience}
   \begin{asparadesc}
@@ -32,61 +31,66 @@
       Engineer}{http://apple.com/}
     \vspace{-5mm}
     \begin{itemize}
-      \item Designed key aspects of the backing blob store engine that enables iCloud to scale to
+      \item Designed key aspects of the backing storage engine that enables iCloud to scale to
         hundreds of millions of users each month.
-      \item Architected the new multi-tenant compaction system which provides better throughput
-        guarantees and reliability.
-      \item All of this work provides better resource forcasting for finance teams. 
+      \item Architected the new multi-tenant storage compaction system which provides better
+        throughput guarantees and reliability.
       \item Engineered a proactive solution to data loss prevention. Lead to the discovery of
         several undiscovered, subtle bugs in the underlying frameworks and data store.
       \item Vastly reduced database load by introducing a framework that allows numerous subsystems
         to share the same pooled resources concurrently.
-      \item Languages / tools used: Scala, Java, Cassandra, MapReduce
+      \item Languages / tools used: Scala, Java, Cassandra, MapReduce.
     \end{itemize}
     \employer{Cloudera}{San Francisco, CA}{Summer 2015}{Software Engineer
       Intern}{http://cloudera.com/}
     \vspace{-5mm}
     \begin{itemize}
-    \item Implemented network performance increase in Apache Spark that reduced traffic by over
-      90\%
-    \item Integrated Apache Avro as a first-class citizen into Spark core for use in RDDs
-    \item Languages / tools used: Scala, Java, Apache Spark
+    \item Implemented network performance increases in Apache Spark
+      that reduced traffic by over 90\%.
+    \item Integrated Apache Avro as a first-class citizen into Spark core for
+      use in RDDs.
+    \item Languages / tools used: Scala, Java, Apache Spark.
     \end{itemize}
     \employer{Google}{New York, NY}{Summer 2014}{SRE Engineering Practicum
       Intern}{http://google.com/}
     \vspace{-5mm}
     \begin{itemize}
-    \item Implemented load testing infrastructure for newly release software, allowing for early
-      detection of bugs and performance defects
-    \item Reduced request latency for 70\% for back-end monitoring services
+    \item Implemented load testing infrastructure for newly release software,
+      allowing for early detection of bugs and performance defects.
+    \item Reduced request latency for back-end monitoring services by 70\%.
     \item Languages / tools used: Java, Python Protocol Buffers, Google data stores.
     \end{itemize}
     \employer{Amazon}{Seattle, WA}{Spring 2014}{Software Developer Engineer
       Intern}{http://amazon.com/}
     \vspace{-5mm}
     \begin{itemize}
-    \item Overhauled internal search capabilities for the Enterprise Data Warehouse team, allowing
-      for near-real time search capabilities for Amazon's data analytics.
-    \item Designed the new search system to be fault tolerant to preserve data integrity.
-    \item Languages / tools used: Java, various Amazon cloud products, including Cloud-Search and
-      SNS.
+    \item Overhauled internal search capabilities for the Enterprise Data
+      Warehouse team, allowing for near-real time searching for financial
+      datasets and results.
+    \item Designed the new search system to be fault tolerant to preserve data
+      integrity.
+    \item Languages / tools used: Java, various AWS products, including
+      Cloud-Search and SNS.
     \end{itemize}
     \employer{John Hopkins University Applied Physics Lab}{Laurel, MD}{Summer 2013}{Engineering
       Intern}{http://jhuapl.edu/}
     \vspace{-5mm}
     \begin{itemize}
-    \item Working with a team, developed a sensor management system used to control and collect
-      data from multiple telescopes remotely.
+    \item Working with a team, developed a sensor management system used to control and collect data
+      from multiple telescopes remotely.
     \item Languages / tools used: Java, Ant, SVN, SQL, Google Protocol Buffers.
     \end{itemize}
   \end{asparadesc}
   \section{\mysidestyle Education}
   \begin{compactdesc}
-  \item[Rochester Institute of Technology] - Rochester, NY \rdate{2012 - 2016} \\
-    \textbf{Major}: Computer Science \rdate{In-Major: 3.82 GPA, Overall: 3.60 GPA} \\
+  \item[Rochester Institute of Technology] - Rochester, NY \hfill {2012 - 2016} \\
+    \textbf{Major}: Computer Science \hfill {In-Major: 3.82 GPA, Overall: 3.60} \\
     \vspace{-4mm}
     \begin{flushright} Graduated \textit{Cum Laude} \end{flushright}
+    \vspace{1mm}
+    \small Courses include: Programming Language Theory, Compiler Constructions, Data Mining
   \end{compactdesc}
+  \vspace{-2mm}
 \section{\mysidestyle Skills \& Certifications}
   \begin{compactdesc}
   \item[Languages] \small Scala, Java, Python, Go, Rust
@@ -96,27 +100,31 @@
   \item[Apache Spark Contributor] Developed a solution to allow for Spark to efficiently read /
     write Apache Avro data formats. Worked on features in the Spark SQL engine.
   \end{compactdesc}
-\section{\mysidestyle Self-Directed Projects}
+  \vspace{-2mm}
+\section{\mysidestyle Self-Directed Projects Include}
   \textbf{Raft Key-Value Store}
   \begin{itemize}[noitemsep,nolistsep]
-    \item Distributed key-value store that provides linearizability guarentees for all operations.
+    \item Distributed key-value store that provides linearizability guarentees for all type of
+      operations.
     \item Out of the box support for leader election, transparent handling of failing nodes, and
       correctness under network partition.
   \end{itemize}
+  \vspace{-2mm}
   \textbf{CRDT Distributed Tally Service}
   \begin{itemize}[noitemsep,nolistsep]
     \item Distributed backend counting service that is capable of withstanding large amounts of
       concurrent requests.
     \item Uses G-Counters as the backing asynchronous replication model.
-    \item Implemented with a combination of lightweight threads for the request handling, Zookeeper
+    \item Utilizes with a combination of lightweight threads for the request handling, Zookeeper
       as the election system, and Thrift as the shared communication protocol.
-   \end{itemize}
-   \textbf{Github Language Analysis}
-   \begin{itemize}[noitemsep,nolistsep]
-     \item Data analyzer and ingest pipeline using Go to determine the programming language usage
-       across all of GitHub.
-     \item Provides key insights to language usage trends over time and in comparison to each other.
-     \item Implemented a distributed ingest pipeline to increase processing capabilities.
-   \end{itemize}
+  \end{itemize}
+  \vspace{-2mm}
+  \textbf{Github Language Analysis}
+  \begin{itemize}[noitemsep,nolistsep]
+    \item Data analyzer and ingest pipeline using Go to determine the programming language usage
+      across all of GitHub.
+    \item Provides key insights to language usage trends over time and in comparison to each other.
+    \item Implemented a multi-node ingest pipeline to increase processing capabilities.
+  \end{itemize}
 \end{resume}
 \end{document}
