--- a/resume.tex
+++ b/resume.tex
@@ -37,7 +37,7 @@
       \item Architected the new multi-tenant online compaction system which provides higher
         throughput guarantees and reliability by distributing workloads over backend resources
         evenly.
-      \item Engineered a proactive solution to data loss prevention. Lead to the discovery of
+      \item Engineered a proactive solution to data loss prevention. Led to the discovery of
         several undiscovered, subtle bugs in the underlying frameworks and data store.
       \item Vastly reduced database load by introducing a job framework that allows numerous
         scheduled jobs share the same pooled resources concurrently.
