--- a/resume.tex
+++ b/resume.tex
@@ -56,7 +56,7 @@
       Intern}{http://google.com/}
     \vspace{-5mm}
     \begin{itemize}
-    \item Implemented load testing infrastructure for newly release software, allowing for early
+    \item Implemented load testing infrastructure for newly released software, allowing for early
       detection of bugs and performance defects.
     \item Reduced request latency for back-end monitoring services by 70\%.
     \item Languages / tools used: Java, Python Protocol Buffers, Google data stores.
@@ -66,7 +66,7 @@
     \vspace{-5mm}
     \begin{itemize}
     \item Overhauled internal search capabilities for the Enterprise Data Warehouse team, allowing
-      for near-real time searching for financial datasets and results.
+      for near real-time searching for financial datasets and results.
     \item Designed the new search system to be fault tolerant to preserve data integrity.
     \item Languages / tools used: Java, various AWS products, including Cloud-Search and SNS.
     \end{itemize}
@@ -86,7 +86,9 @@
     \vspace{-4mm}
     \begin{flushright} Graduated \textit{Cum Laude} \end{flushright}
     \vspace{1mm}
-    \small Courses include: Programming Language Theory, Compiler Construction, Data Mining
+    \begin{itemize}
+    \item \small Courses include: Programming Language Theory, Compiler Construction, Data Mining
+    \end{itemize}
   \end{compactdesc}
   \vspace{-2mm}
 \section{\mysidestyle Skills \& Certifications}
@@ -99,7 +101,7 @@
   \end{compactdesc}
   \vspace{-2mm}
   \section{\mysidestyle Self-Directed Projects Include}
-  \textbf{Raft Key-Value Store}
+  \textbf{Raft Key-Value Store} \rurl{https://github.com/JDrit/RaftService}
   \begin{itemize}
     \item Distributed key-value store that provides linearizability guarentees for all type of
       operations.
@@ -107,7 +109,7 @@
       correctness under network partition.
   \end{itemize}
   \vspace{-2mm}
-  \textbf{CRDT Distributed Tally Service}
+  \textbf{CRDT Distributed Tally Service} \rurl{https://github.com/JDrit/gossip-crdt}
   \begin{itemize}
     \item Distributed backend counting service that is capable of withstanding large amounts of
       concurrent requests.
@@ -116,7 +118,7 @@
       cluster state, and Thrift as the shared communication protocol.
   \end{itemize}
   \vspace{-2mm}
-  \textbf{Github Language Analyzer}
+  \textbf{Github Language Analyzer} \rurl{https://github.com/JDrit/github_stats}
   \begin{itemize}
     \item Data analyzer and ingest pipeline using Go to analyze correlations in programming language
       usage across all of GitHub.
