mostly changing the formatting of the section names

--- a/resume.cls
+++ b/resume.cls
@@ -281,7 +281,7 @@
 \newdimen\resumewidth
 
 \resumewidth=6.5in
-\sectionskip=3.5ex plus 1ex minus -.2ex % values stolen from LaTeX
+\sectionskip=2.5ex plus 1ex minus -.2ex % values stolen from LaTeX
 
 \def\newsectionwidth#1{%
 		     \sectionwidth=#1
@@ -835,8 +835,7 @@
       \setlength{\topsep}{0in} \setlength{\partopsep}{0in} 
       \setlength{\leftmargin}{0.25in}}}{\end{list}}
 
-%\newcommand{\mysidestyle}{\footnotesize\sc}
-\newcommand{\mysidestyle}{\small\sc}
+\newcommand{\mysidestyle}{\sc}
 \newcommand{\myheadingstyle}{\sl}
 \newcommand{\mysubheadingstyle}{\sl}
 
