added outline and bs

--- a/resume.tex
+++ b/resume.tex
@@ -26,6 +26,10 @@
 \name{\Large{Joseph D. Batchik} \hspace{145pt}
   {\small{\href{mailto:josephbatchik@gmail.com}{josephbatchik@gmail.com} - (410) 599-3550}}}
 \begin{resume}
+\section{\mysidestyle Summary}
+
+Software engineer with a particular interest in large-scale infrastructure and
+distributed systems, working on development through to production.
 
 \section{\mysidestyle Work Experience}
 
@@ -74,7 +78,7 @@
 
   \begin{compactdesc}
     \item[Rochester Institute of Technology] - Rochester, NY \hfill {2012 - 2016} \\
-      \textbf{Major}: Computer Science \hfill {In-Major: 3.82 GPA, Overall: 3.60} \\
+      Bachelors of Science in Computer Science \hfill {In-Major: 3.82 GPA, Overall: 3.60} \\
       \vspace{-4mm}
       \begin{flushright} Graduated \textit{Cum Laude} \end{flushright}
   \end{compactdesc}
@@ -91,9 +95,7 @@
     write Apache Avro data formats. Worked on features in the Spark SQL engine.
   \end{compactdesc}
 
-
 \section{\mysidestyle Self-Directed Projects Include}
-
 
   \textbf{Raft Key-Value Store} \rurl{https://github.com/JDrit/RaftService}
   \begin{itemize}
@@ -112,11 +114,5 @@
       cluster state, and Thrift as the shared communication protocol.
   \end{itemize}
 
-  \textbf{Github Language Analyzer} \rurl{https://github.com/JDrit/github_stats}
-  \begin{itemize}
-    \item Data analyzer and ingest pipeline using Go to analyze correlations in programming language
-      usage across all of GitHub.
-    \item Provides key insights to language usage trends over time and in comparison to each other.
-  \end{itemize}
 \end{resume}
 \end{document}
